# AniFly

./: Fly  anifly  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  anifly.cpp
app/src/main/cpp/src/: AnimationFly.cpp  Sakura.cpp  Sakura.hpp  anifly.h  globals.cpp  globals.h
app/src/main/cpp/src/api/: AnimationFly.hpp
app/src/main/cpp/src/basic/: Exception.hpp  Logger.cpp  Logger.h
app/src/main/cpp/src/network/: NetHandler.cpp  NetHandler.h  NetJob.cpp  NetJob.hpp  NetUtil.cpp  NetUtil.hpp
app/src/main/java/ink/flybird/anifly/: AniApp.kt  CrashHandler.kt  CrashReportActivity.kt  FullScreenPlayerActivity.kt  MainActivity.kt  PlayerService.kt
app/src/main/java/ink/flybird/anifly/data/common/: Setting.kt  ShareInfo.kt
app/src/main/java/ink/flybird/anifly/data/exception/: AFCommonError.kt  AFDetilPageError.kt  AFPlayerError.kt  NativeExceptionCallBack.kt
app/src/main/java/ink/flybird/anifly/data/module/: CoroutineDispatcherModule.kt  CoroutineQualifier.kt  CoroutineScopeModule.kt  ImageLoaderModule.kt  OkHttpModule.kt  WorkerModule.kt
app/src/main/java/ink/flybird/anifly/network/: AniCore.kt
app/src/main/java/ink/flybird/anifly/network/types/: Bangumi.kt  BangumiDetailPage.kt  BangumiMap.kt  BangumiPlayList.kt  BangumiPlayPage.kt
app/src/main/java/ink/flybird/anifly/ui/components/: AFAnimationCard.kt  (+15 more)
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
publish/release/: output-metadata.json
shareWeb/: share.html
(+83 files in other folders)
